--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <form action="#">
+        <form action="#" onsubmit="submitForm();return false">
             <label for="title">Title:</label>
             <input type="text" name="title" class="title" required>
 
@@ -27,7 +27,7 @@
     </section>
 
     <section class="book-container"></section>
-
+    
     <script src="./script.js"></script>
 </body>
 </html>
