--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section>
+        <button class="add-book-button">Add new book</button>
         <form action="#" onsubmit="submitForm();return false">
             <label for="title">Title:</label>
             <input type="text" name="title" class="title" required>
@@ -24,6 +25,7 @@
 
             <input type="submit" id="submit">
         </form>
+        <button class="close-form-button">Close</button>
     </section>
 
     <section class="book-container"></section>
