small changes in design and layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p>Library</p>
-        <button class="add-book-button">Add new book</button>
+        <button class="add-book-button">Add book</button>
     </header>
 
     <section>
@@ -35,8 +35,8 @@
                 <input type="checkbox" class="checkbox">
             </div>
 
-            <div class="form-row">
-                <input type="submit" id="submit">
+            <div class="form-row buttons">
+                <input type="submit" id="submit" value="Add book">
                 <input type="button" class="close-form-button" value="Close">
             </div>
         </form>
