added media queries

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="add-book-button">Add book</button>
     </header>
 
-    <section>
+    <section class="form-container">
         <form action="#" onsubmit="submitForm();return false">
             <div class="form-row">
                 <label for="title">Title:</label>
