--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
             <div class="form-row">  
                 <label for="author">Author:</label>
-                <input type="text" name="author" class="author" required>
+                <input type="text" name="author" class="author" maxlength="100" required>
             </div>
 
             <div class="form-row">    
                 <label for="pages">Pages:</label>
-                <input type="number" name="pages" class="pages" required>
+                <input type="number" name="pages" class="pages" max="1000000" required>
             </div>
 
             <div class="form-row">   
